# md5check

./: Cargo.toml  LICENSE.txt  README.md  old_version_archive.7z
.cargo/: config.toml
src/: cli.rs  hash.rs  main.rs  ui.rs
src/ui/: mod.rs
src/ui/widgets/: hash_list_prompter.rs  log.rs  mod.rs  setting.rs  status.rs
