[package]
name = "md5hash"
version = "0.2.1"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
clap = { version = "4.5.29", features = ["derive"] }
colored = "3.0.0"
md-5 = { version = "0.11.0-pre.4" }
rayon = "1.10.0"
regex = { version = "1.11.1", features = [] }